<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">모두의 환승</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl8">도착역</string>
    <string name="lbl9">등록</string>
    <string name="lbl6">역</string>
    <string name="lbl7">도착</string>
    <string name="lbl">앱 이름</string>
    <string name="lbl4">호선 선택</string>
    <string name="lbl5">방향 (다음역)</string>
    <string name="lbl2">출발</string>
    <string name="lbl3">출발역</string>

    <string name="lbl16">다음</string>
    <string name="lbl17">완료</string>

    <string name="lbl11">장소 선택</string>
    <string name="lbl10">층 선택</string>

    <string name="lbl12">엘리베이터</string>
    <string name="lbl13">이동</string>
    <string name="lbl14">개찰구</string>
    <string name="lbl15">하차</string>

    <string name="floor">Floor</string>
    <string-array name="spinner_array">
        <item>B5층</item>
        <item>B4층</item>
        <item>B3층</item>
        <item>B2층</item>
        <item>B1층</item>
        <item>1층</item>
        <item>2층</item>
        <item>3층</item>
        <item>4층</item>
        <item>5층</item>
    </string-array>

</resources>