<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/upperHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@color/white_A700"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/upperArea"
            style="@style/blue_rightbottom_rectangle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oldOne"
                style="@style/white_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="기존 내용" />

            <ScrollView
                android:id="@+id/upperScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lowerHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/indigo_700"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lowerArea"
            style="@style/white_lefttop_rectangle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/newOne"
                style="@style/black_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="입력한 내용" />

            <LinearLayout
                android:id="@+id/navbar"
                style="@style/groupStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90pxh"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/elevator"
                    style="@style/etSolidRounded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_leftbottom_rectangle"
                    android:ellipsize="end"
                    android:hint="@string/lbl4"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_23pxv"
                    android:paddingEnd="@dimen/_17pxh"
                    android:paddingBottom="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@string/lbl12"
                    android:textColorHint="@color/indigo_700"
                    tools:text="@string/lbl12" />

                <TextView
                    android:id="@+id/walk"
                    style="@style/txtSolid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:ellipsize="end"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_23pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@string/lbl13"
                    tools:text="@string/lbl13" />

                <EditText
                    android:id="@+id/pass"
                    style="@style/etSolid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:background="@drawable/rectangle_bg_white_a700"
                    android:ellipsize="end"
                    android:hint="@string/lbl6"
                    android:inputType="text"
                    android:paddingStart="@dimen/_29pxh"
                    android:paddingTop="@dimen/_23pxv"
                    android:paddingEnd="@dimen/_29pxh"
                    android:paddingBottom="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@string/lbl14"
                    android:textColorHint="@color/indigo_700"
                    tools:text="@string/lbl14" />

                <TextView
                    android:id="@+id/getOff"
                    style="@style/txtSolid_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:ellipsize="end"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_23pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_21pxv"
                    android:singleLine="true"
                    android:text="@string/lbl15"
                    tools:text="@string/lbl15" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/lowerScroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/buttonArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@color/indigo_700"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editBtn"
                    style="@style/bottom_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="기존 내용 변경" />

                <View
                    android:id="@+id/border"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_71pxv"
                    android:background="@color/white_A700" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/completeBtn"
                    style="@style/bottom_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="기존 내용 변경" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>